<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Quiz2">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="404dp"
        android:layout_height="69dp"
        android:text="@string/q2_which_of_the_following_attacks_store_the_script_permanently_into_the_vulnerable_application"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />

    <RadioButton
        android:id="@+id/radioButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/stored_cross_site_scripting"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <RadioButton
        android:id="@+id/radioButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sql_injection"
        app:layout_constraintEnd_toEndOf="@+id/radioButton5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/radioButton5"
        app:layout_constraintTop_toBottomOf="@+id/radioButton5" />

    <RadioButton
        android:id="@+id/radioButton7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/self_cross_site_scripting"
        app:layout_constraintEnd_toEndOf="@+id/radioButton6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/radioButton6"
        app:layout_constraintTop_toBottomOf="@+id/radioButton6" />

    <RadioButton
        android:id="@+id/radioButton8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cross_site_request_forgery"
        app:layout_constraintEnd_toEndOf="@+id/radioButton7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/radioButton7"
        app:layout_constraintTop_toBottomOf="@+id/radioButton7" />

    <Button
        android:id="@+id/button8"
        android:layout_width="83dp"
        android:layout_height="48dp"
        android:layout_marginStart="148dp"
        android:layout_marginLeft="148dp"
        android:layout_marginTop="76dp"
        android:text="@string/next"
        app:layout_constraintStart_toStartOf="@+id/radioButton8"
        app:layout_constraintTop_toBottomOf="@+id/radioButton8" />

</androidx.constraintlayout.widget.ConstraintLayout>