<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Quiz3">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Q3.  Which is the possible vulnerability found in a database?"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <RadioButton
        android:id="@+id/radioButton10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cross_site_request_forgery"
        app:layout_constraintEnd_toEndOf="@+id/radioButton9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/radioButton9"
        app:layout_constraintTop_toBottomOf="@+id/radioButton9" />

    <RadioButton
        android:id="@+id/radioButton11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Server-side Request Forgery"
        app:layout_constraintEnd_toEndOf="@+id/radioButton10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/radioButton10"
        app:layout_constraintTop_toBottomOf="@+id/radioButton10" />

    <RadioButton
        android:id="@+id/radioButton12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/none_of_the_above"
        app:layout_constraintEnd_toEndOf="@+id/radioButton11"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/radioButton11"
        app:layout_constraintTop_toBottomOf="@+id/radioButton11" />

    <RadioButton
        android:id="@+id/radioButton9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="SQL Injection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="@+id/radioButton12"
        app:layout_constraintTop_toBottomOf="@+id/radioButton12"
        app:layout_constraintVertical_bias="0.261" />
</androidx.constraintlayout.widget.ConstraintLayout>